--- a/plugins/repository-gcs/build.gradle
+++ b/plugins/repository-gcs/build.gradle
@@ -63,7 +63,7 @@ dependencies {
   api "org.apache.logging.log4j:log4j-1.2-api:${versions.log4j}"
   api "commons-codec:commons-codec:${versions.commonscodec}"
   api 'com.google.api:api-common:1.8.1'
-  api 'com.google.api:gax:1.54.0'
+  api 'com.google.api:gax:2.27.0'
   api 'org.threeten:threetenbp:1.4.4'
   api 'com.google.protobuf:protobuf-java-util:3.20.0'
   api 'com.google.protobuf:protobuf-java:3.21.7'
@@ -150,6 +150,10 @@ thirdPartyAudit {
     'com.google.appengine.api.urlfetch.HTTPResponse',
     'com.google.appengine.api.urlfetch.URLFetchService',
     'com.google.appengine.api.urlfetch.URLFetchServiceFactory',
+    'com.google.protobuf.util.JsonFormat',
+    'com.google.protobuf.util.JsonFormat$Parser',
+    'com.google.protobuf.util.JsonFormat$Printer',
+    'com.google.protobuf.util.Timestamps',
     // commons-logging optional dependencies
     'org.apache.avalon.framework.logger.Logger',
     'org.apache.log.Hierarchy',
@@ -197,6 +201,11 @@ thirdPartyAudit {
     'org.apache.http.protocol.HttpContext',
     'org.apache.http.protocol.HttpProcessor',
     'org.apache.http.protocol.HttpRequestExecutor',
+    'org.graalvm.nativeimage.hosted.Feature',
+    'org.graalvm.nativeimage.hosted.Feature$BeforeAnalysisAccess',
+    'org.graalvm.nativeimage.hosted.Feature$DuringAnalysisAccess',
+    'org.graalvm.nativeimage.hosted.Feature$FeatureAccess',
+    'org.graalvm.nativeimage.hosted.RuntimeReflection',
     // commons-logging provided dependencies
     'javax.jms.Message',
     'javax.servlet.ServletContextEvent',
