Add check on error message for negative test
Signed-off-by: Michael Froh <froh@amazon.com>

--- a/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/30_filter_query.yml
+++ b/modules/search-pipeline-common/src/yamlRestTest/resources/rest-api-spec/test/search_pipeline/30_filter_query.yml
@@ -131,10 +131,12 @@ teardown:
         body: {
           search_pipeline: {
             "request_processors": [
-              "filter_query": {
-                "query": {
-                  "woozlewuzzle": {
-                    "field": "foo"
+              {
+                "filter_query": {
+                  "query": {
+                    "woozlewuzzle": {
+                      "field": "foo"
+                    }
                   }
                 }
               }
@@ -142,3 +144,5 @@ teardown:
           }
         }
   - match: { status: 400 }
+  - match: { error.type: "parsing_exception"}
+  - match: { error.reason: "unknown query [woozlewuzzle]"}
