--- a/doc-tools/missing-doclet/build.gradle
+++ b/doc-tools/missing-doclet/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+  implementation "org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec:1.0.2.Final"
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs += ["--release", targetCompatibility.toString()]
   options.encoding = "UTF-8"
