--- a/plugins/repository-s3/build.gradle
+++ b/plugins/repository-s3/build.gradle
@@ -535,7 +535,7 @@ if (BuildParams.runtimeJavaVersion <= JavaVersion.VERSION_1_8) {
   thirdPartyAudit.ignoreMissingClasses 'javax.activation.DataHandler'
 }
 
-["test", "internalClusterTest"].forEach { action ->
+["test", "internalClusterTest", "s3ThirdPartyTest", "testRepositoryCreds", "yamlRestTest", "yamlRestTestECS", "yamlRestTestMinio", "yamlRestTestEKS"].forEach { action ->
   tasks.named(action).configure {
     dependsOn "writeTestJavaPolicy"
     systemProperty 'java.security.policy', "file://${buildDir}/tmp/java.policy"
