--- a/plugins/identity-shiro/build.gradle
+++ b/plugins/identity-shiro/build.gradle
@@ -18,12 +18,15 @@ opensearchplugin {
 
 dependencies {
   implementation 'org.apache.shiro:shiro-core:1.11.0'
+
   // Needed for shiro
   implementation "org.slf4j:slf4j-api:${versions.slf4j}"
 
   implementation 'commons-beanutils:commons-beanutils:1.9.4'
   implementation 'commons-logging:commons-logging:1.2'
   implementation 'commons-lang:commons-lang:2.6'
+
+  implementation 'org.passay:passay:1.6.3'
 
   implementation "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}"
 
