--- a/plugins/identity-shiro/build.gradle
+++ b/plugins/identity-shiro/build.gradle
@@ -33,8 +33,8 @@ dependencies {
   testImplementation project(path: ':modules:transport-netty4') // for http
   testImplementation project(path: ':plugins:transport-nio') // for http
   testImplementation "org.mockito:mockito-core:${versions.mockito}"
-    testImplementation project(path: ':client:rest-high-level')
-    testImplementation 'junit:junit:4.13.2'
+  testImplementation project(path: ':client:rest-high-level')
+  testImplementation 'junit:junit:4.13.2'
 }
 
 /*
@@ -50,6 +50,7 @@ internalClusterTest {
 }
 
 thirdPartyAudit.ignoreMissingClasses(
+  'com.google.common.hash.BloomFilter',
   'javax.servlet.ServletContextEvent',
   'javax.servlet.ServletContextListener',
   'org.apache.avalon.framework.logger.Logger',
@@ -65,7 +66,10 @@ thirdPartyAudit.ignoreMissingClasses(
   'org.apache.log4j.Level',
   'org.apache.log4j.Logger',
   'org.apache.log4j.Priority',
+  'org.cryptacular.bean.HashBean',
   'org.slf4j.impl.StaticLoggerBinder',
   'org.slf4j.impl.StaticMDCBinder',
-  'org.slf4j.impl.StaticMarkerBinder'
+  'org.slf4j.impl.StaticMarkerBinder',
+  'org.springframework.context.MessageSource',
+  'org.springframework.context.support.MessageSourceAccessor'
 )
