--- a/rest-api-spec/src/main/resources/rest-api-spec/test/tasks.list/10_basic.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/tasks.list/10_basic.yml
@@ -17,13 +17,8 @@
   - do:
       tasks.list:
         group_by: parents
-        detailed: true
-  - set:
-      tasks._arbitrary_key_: task_id
 
   - is_true: tasks
-  - is_true: tasks.$task_id.resource_stats
-  - is_true: tasks.$task_id.resource_stats.total
 
 ---
 "tasks_list headers":
@@ -39,7 +34,24 @@
   - match: { tasks.0.headers.X-Opaque-Id: "That is me" }
 
 ---
-"tasks_list detailed":
+"tasks_list resource stats":
+  - skip:
+      version: " - 2.0.99"
+      reason: resource_stats was introduced in 2.1.0
+
+  - do:
+      tasks.list:
+        group_by: parents
+        detailed: true
+  - set:
+      tasks._arbitrary_key_: task_id
+
+  - is_true: tasks
+  - is_true: tasks.$task_id.resource_stats
+  - is_true: tasks.$task_id.resource_stats.total
+
+---
+"tasks_list thread info":
   - skip:
       version: " - 2.99.99"
       reason: thread_info was introduced in 3.0.0
